# libAlazar

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
doc/: requirements.md
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  alazarBuff.h  alazarSim.cpp  apiExample.cpp  errorTest.cpp  libAlazar.cpp  libAlazar.h  libAlazarAPI.cpp  libAlazarAPI.h  libAlazarConfig.h  logger.h  runTests.cpp  testBufferQ.cpp  version.sh  version_template.h
src/matlab/: AlazarATS9870.m  AlazarTest.m  CMakeLists.txt  RespondToDataReady.m  libAlazar_pcwin64.m  loadLibAlazar.m
src/python/: CMakeLists.txt  apiTest.py  libAlazar.py  libalazar.py  setup.py  test_alazar_driver.py
test/: runTests.cpp
test/alazarSim/: CMakeLists.txt  alazarSim.cpp
test/docker/libAlazar-builder/: Dockerfile  ca-certificates.crt
test/docker/libAlazar-runner/: Dockerfile
test/scripts/: arbTest.py
test/unitTest/: AcqToDisk.cpp  CMakeLists.txt  errorTest.cpp  runTests.cpp
